# fai-telegram-bot

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: README.md  package.json
frontend/src/: index.js  request.js  socket.js
frontend/src/components/: footer.js
frontend/src/pages/: home.js  login.js
frontend/src/static/: style.css
src/: bot.py  cli.py  controller.py  group_call.py  main.py  tui.py  web.py
